# ros_vision

./: CMakeLists.txt  README.md  package.xml
configs/: default.yaml  test_vert_orange.yaml
launch/: FilterChainNode.launch  RosVision.launch  RosVisionDefault.launch
msg/: FilterGroup.msg  FilterGroupList.msg  FilterProperties.msg  IODescriptor.msg  StartSignal.msg
scripts/: comparaison_algorithme.py  cv2  filter_chain_node.py  image_publisher_compressed_node.py  image_publisher_node.py  master_node.py  performance_tester_node.py  perspective_calibrator.py  roscvm_gui.py  scheduler_node.py  test.py  test_topics.py  test_topics2.py  web_ui_node.py  webcam_node.py
scripts/GUI/: gui_node.py
scripts/GUI/assets/css/: roscvm.css
scripts/GUI/assets/js/: roscvm.js
scripts/GUI/views/: dashboard.html
scripts/Master/: filter_chain_node_wrapper.py  group_watcher.py  node.py  scheduler.py  topic_watcher.py
scripts/Master/Scheduler/: scheduler.py  topic_watcher.py
scripts/Master/Workspace/: workspace.py
scripts/Master/Workspace/Group/: filter_group_node_wrapper.py  group.py
scripts/RosVision/: filter_chain.py  io_manager.py  message_factory.py
scripts/RosVision/Filters/: filter.py  filter_descriptor.py  filter_factory.py  io_descriptor.py  parameter_descriptor.py
scripts/RosVision/Filters/BGR2Gray/: filter.py
scripts/RosVision/Filters/BGR2HSV/: filter.py
scripts/RosVision/Filters/BilateralFilter/: filter.py
scripts/RosVision/Filters/BitwiseAnd/: filter.py
scripts/RosVision/Filters/BitwiseOr/: filter.py
scripts/RosVision/IO/: compressed_image.py  image.py  io_object.py  io_object_stamped.py  laser_scan.py  point_cloud.py  polygon.py  polygon_list_stamped.py  polygon_stamped.py  string.py
scripts/Scheduler/: topic_watcher.py
scripts/assets/css/: roscvm.css
scripts/assets/js/: roscvm.js
scripts/views/: dashboard.html
src/: openni_node.cpp
srv/: CreateFilterGroup.srv  DeleteFilterGroup.srv  GetFilterInfo.srv  ListFilterChains.srv  ListFilterGroups.srv  ListFilters.srv  SetParameterValue.srv
tests/: test_laser_to_pc.sh  test_pcl.sh
workspaces/: default.yaml  demo_lignes_mauves.yaml  test_point_cloud.yaml  test_vert_orange.yaml  test_vert_orange_seq.yaml
(+23 files in other folders)
